--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Chieh-Hsin Lai"
   avatar           : "my-bio-photo.jpg"
-  bio              : "Research Scientist at Sony AI; Ph.D. in Mathematics from University of Minnesota, Twin Cities"
+  bio              : "Research Scientist/Tech Leader at Sony AI; Ph.D. in Mathematics from University of Minnesota, Twin Cities"
   location         : "Tokyo, Japan"
   employer         :
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
