--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Chieh-Hsin (Jesse) Lai"
 title_separator          : "-"
 name                     : &name "Chieh-Hsin Lai"
-description              : &description "Research Scientist and Tech Leader at Sony AI;"\ " Ph.D. in Mathematics from University of Minnesota -- Twin Cities"
+description              : &description "Research Scientist and Tech Leader at Sony AI; Ph.D. in Mathematics from University of Minnesota -- Twin Cities"
 url                      : https://chiehhsinjesselai.github.io/ChiehHsinLai # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
